parameterized-macro/tests/fail/input_param_order_in_err_message.stderr
error: custom attribute panicked
 --> $DIR/input_param_order_in_err_message.rs:3:1
  |
3 | #[parameterized(zzz = { "a", "b" }, aaa = { 1, 2, 3 })]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: [parameterized-macro] error: Inconsistent argument list length for 'aaa'; all inputs (zzz, aaa) should have equal length
